refactor : 컬럼명 수정 및 프로그램 목록 반환시 좋아요 표시